@@ -10,6 +10,7 @@ PHP                                                                        NEWS
 - Fixed bug #31110 (PHP 4.3.10 does not compile on Tru64 UNIX 5.1B). (Derick)
 - Fixed bug #31107 (Compile failure on Solaris 9 (Intel) and gcc 3.4.3). (Derick)
 - Fixed bug #31103 (Better error message when c-client cannot be found). (Ilia)
+- Fixed bug #31101 (missing kerberos header file path with --with-openssl). (Jani)
 - Fixed bug #31087 (broken php_url_encode_hash macro). (Ilia)
 - Fixed bug #31072 (var_export() does not output an array element with an empty
   string key). (Derick)
